<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/openClose"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/connect"
        android:layout_centerHorizontal="true"
        android:text="@string/openCloseStr" />

    <Button
        android:id="@+id/connect"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/connectStr" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        app:srcCompat="@drawable/lock"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/msgLabel"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:text="@string/msgDefaultText" />

    <EditText
        android:id="@+id/password"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_below="@+id/msgLabel"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/placeholder"
        android:inputType="numberPassword" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:contentDescription="TODO"
        app:srcCompat="@drawable/macnolo" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        app:srcCompat="@drawable/future" />

</RelativeLayout>